Update and rename pipeline.yml to sonar-cloud-scan.yml

--- a/.github/workflows/sonar-cloud-scan.yml
+++ b/.github/workflows/sonar-cloud-scan.yml
@@ -1,9 +1,10 @@
-name: "SonarCloud integration with Git Action pipeline"
+name: "SonarCloud Scan"
 on:
   workflow_dispatch:
 
 jobs:
-  DemoSonarCloudSCan:
+  sonar-cloud-scan:
+    name: SonarCloud Scan
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
