--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -11,7 +11,7 @@ jobs:
     if: github.ref == 'refs/heads/main'
     uses: e2eSolutionArchitect/sonarcloud-gitaction-terraform-scan/.github/workflows/aws_tf_plan.yml@main
     with:
-      #path: templates/small
+      #path: project/project1
       tf_version: 1.7.1
       tf_vars_file: env/dev.tfvars
       gh_environment: dev
@@ -20,7 +20,7 @@ jobs:
     needs: Plan_Dev
     uses: e2eSolutionArchitect/sonarcloud-gitaction-terraform-scan/.github/workflows/aws_tf_apply.yml@main
     with:
-      #path: templates/small
+      #path: project/project2
       tf_version: 1.7.1
       tf_vars_file: env/dev.tfvars
       gh_environment: dev
