--- a/.github/workflows/aws_tf_apply.yml
+++ b/.github/workflows/aws_tf_apply.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       path:
         description: 'Specifies the path of the root terraform module.'
-        required: true
+        required: false
         type: string
       tf_version:
         description: 'Specifies version of Terraform to use. e.g: 1.7.1 Default=latest.'
