--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -1,6 +1,13 @@
 name: "Code Scan"
 on:
   workflow_call:
+    secrets:
+      GITHUB_TOKEN:
+        description: 'github token'
+        required: true
+      SONAR_TOKEN:
+        description: 'sonar token'
+        required: true
 
 jobs:
   sonar-cloud-scan:
