--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -2,7 +2,7 @@ name: "Code Scan"
 on:
   workflow_call:
     secrets:
-      GITHUB_TOKEN:
+      GIT_TOKEN:
         description: 'github token'
         required: true
       SONAR_TOKEN:
@@ -20,7 +20,7 @@ jobs:
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
         env:
-            GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+            GIT_TOKEN: ${{ secrets.GIT_TOKEN }}
             SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
           args: >
