--- a/.github/workflows/aws_tf_apply.yml
+++ b/.github/workflows/aws_tf_apply.yml
@@ -27,10 +27,10 @@ jobs:
     name: Terraform Apply
     runs-on: ubuntu-latest
     environment: ${{ inputs.gh_environment }}
-    defaults:
-      run:
-        shell: bash
-        working-directory: ${{ inputs.path }}
+    # defaults:
+    #   run:
+    #     shell: bash
+    #     working-directory: ${{ inputs.path }}
         
     steps:
       - name: Checkout
@@ -38,7 +38,9 @@ jobs:
         
       - name: Change file name
         run: | 
-          mv ${{ github.workspace }}/${{ inputs.path }}/${{ inputs.gh_environment }}.tfvars  ${{ github.workspace }}/${{ inputs.path }}/${{ inputs.gh_environment }}.auto.tfvars 
+          mv ${{ github.workspace }}/${{ inputs.gh_environment }}.tfvars  ${{ github.workspace }}/${{ inputs.gh_environment }}.auto.tfvars 
+
+      # mv ${{ github.workspace }}/${{ inputs.path }}/${{ inputs.gh_environment }}.tfvars  ${{ github.workspace }}/${{ inputs.path }}/${{ inputs.gh_environment }}.auto.tfvars 
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2.0.2
