--- a/.github/workflows/aws_tf_plan.yml
+++ b/.github/workflows/aws_tf_plan.yml
@@ -38,7 +38,7 @@ jobs:
         
       - name: Change file name
         run: | 
-          mv ${{ github.workspace }}/${{ inputs.gh_environment }}.tfvars  ${{ github.workspace }}/${{ inputs.gh_environment }}.auto.tfvars 
+          mv ${{ github.workspace }}/${{ inputs.tf_vars_file }}.tfvars  ${{ github.workspace }}/${{ inputs.gh_environment }}.auto.tfvars 
         
 # mv ${{ github.workspace }}/${{ inputs.path }}/${{ inputs.gh_environment }}.tfvars  ${{ github.workspace }}/${{ inputs.path }}/${{ inputs.gh_environment }}.auto.tfvars 
       - name: Setup Terraform
