--- a/.github/workflows/aws_tf_plan.yml
+++ b/.github/workflows/aws_tf_plan.yml
@@ -33,6 +33,15 @@ jobs:
     #     working-directory: ${{ inputs.path }}
         
     steps:
+      - name: Approval
+        uses: trstringer/manual-approval@v1
+        with:
+          secret: ${{ steps.generate_token.outputs.token }}
+          approvers: thesolutionarchitect # is a comma-delimited list of all required approvers. An approver can either be a user or an org team.
+          minimum-approvals: 1
+          timeout-minutes: 2
+          exclude-workflow-initiator-as-approver: false # in production it should be true
+          
       - name: Checkout
         uses: actions/checkout@v3.1.0
         
