--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -9,6 +9,10 @@ jobs:
     secrets:
       GIT_TOKEN: ${{ secrets.GIT_TOKEN }}
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      
+  Approval:
+    if: github.ref == 'refs/heads/main'
+    uses: e2eSolutionArchitect/sonarcloud-gitaction-terraform-scan/.github/workflows/approval.yml@main
     
   Plan_Dev:
     needs: Sonar_Scan
