--- a/.github/workflows/approval.yml
+++ b/.github/workflows/approval.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Approval
         uses: trstringer/manual-approval@v1
         with:
-          secret: ${{ steps.generate_token.outputs.token }}
+          secret: ${{ github.TOKEN }}
           approvers: thesolutionarchitect # is a comma-delimited list of all required approvers. An approver can either be a user or an org team.
           minimum-approvals: 1
           exclude-workflow-initiator-as-approver: false # in production it should be true
